package com.itbird.design.facade.demo;

/**
 * Created by itbird on 2022/7/12
 */
public class SystemA implements ISystemM{
    @Override
    public void method() {

    }
}
