package com.itbird.design.facade.demo;

/**
 * Created by itbird on 2022/7/12
 */
public class SystemC implements ISystemM {
    @Override
    public void method() {

    }
}
