@startuml

title __DEMO's Class Diagram__\n

  namespace com.itbird.design {
    namespace facade.demo {
      class com.itbird.design.facade.demo.Facade {
          + Facade()
          + method()
      }
    }
  }
  

  namespace com.itbird.design {
    namespace facade.demo {
      interface com.itbird.design.facade.demo.ISystemM {
          {abstract} + method()
      }
    }
  }
  

  namespace com.itbird.design {
    namespace facade.demo {
      class com.itbird.design.facade.demo.SystemA {
          + method()
      }
    }
  }
  

  namespace com.itbird.design {
    namespace facade.demo {
      class com.itbird.design.facade.demo.SystemB {
          + method()
      }
    }
  }
  

  namespace com.itbird.design {
    namespace facade.demo {
      class com.itbird.design.facade.demo.SystemC {
          + method()
      }
    }
  }
  

  com.itbird.design.facade.demo.Facade o-- com.itbird.design.facade.demo.SystemA : systemA
  com.itbird.design.facade.demo.Facade o-- com.itbird.design.facade.demo.SystemB : systemB
  com.itbird.design.facade.demo.Facade o-- com.itbird.design.facade.demo.SystemC : systemC
  com.itbird.design.facade.demo.SystemA .up.|> com.itbird.design.facade.demo.ISystemM
  com.itbird.design.facade.demo.SystemB .up.|> com.itbird.design.facade.demo.ISystemM
  com.itbird.design.facade.demo.SystemC .up.|> com.itbird.design.facade.demo.ISystemM


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
